# some_project

./: .flake8  LICENSE  pyproject.toml
.github/workflows/: echo_test.yaml  testing.yaml
some_project/: main.py
some_project/utils/: __init__.py  fib.py  multiply.py  ops.py
tests/: test_fib.py  test_multiply.py  test_ops.py
