[tool.poetry]
name = "some-project"
version = "0.1.0"
description = "Template project"
authors = ["inna-tuzhikova <inna-tuzhikova@github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "some_project"}]

[tool.poetry.dependencies]
python = "3.10.11"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
